@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.5-4
-Date: 2023-03-21
+Date: 2023-03-22
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
